--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "react-native-draggable-flatlist",
-  "version": "4.0.0-beta.12",
+  "name": "@dangtuannghia/oneblocklabs-draggable-flatlist",
+  "version": "0.0.3",
   "description": "A drag-and-drop-enabled FlatList component for React Native",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "react-native": "src/index.tsx",
-  "types": "lib/typescript/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
-    "typecheck": "tsc --skipLibCheck --noEmit",
-    "build": "bob build"
+    "build": "tsc",
+    "typecheck": "tsc --noEmit"
   },
   "husky": {
     "hooks": {
@@ -38,8 +36,7 @@
   "jest": {
     "preset": "react-native",
     "setupFiles": [
-      "./node_modules/react-native-gesture-handler/jestSetup.js",
-      "./jest-setup.js"
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
@@ -49,42 +46,47 @@
   "homepage": "https://github.com/computerjazz/react-native-draggable-flatlist#readme",
   "peerDependencies": {
     "react-native": ">=0.64.0",
-    "react-native-gesture-handler": ">=2.0.0",
-    "react-native-reanimated": ">=2.8.0"
+    "react-native-gesture-handler": ">=1.10.0",
+    "react-native-reanimated": ">=2.2.0"
   },
   "devDependencies": {
     "@testing-library/react-native": "^7.2.0",
-    "@types/react": "^17.0.5",
-    "@types/react-native": "^0.64.5",
+    "@types/react": "^17.0.3",
+    "@types/react-native": "^0.64.2",
     "babel-jest": "^26.6.3",
     "husky": "^4.2.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.71.0",
     "prettier": "^2.2.1",
     "pretty-quick": "^2.0.1",
     "react": "^17.0.2",
     "react-native": "^0.64.0",
-    "react-native-builder-bob": "^0.18.2",
     "react-native-gesture-handler": "^2.1.0",
-    "react-native-reanimated": "^2.8.0",
+    "react-native-reanimated": "^2.3.1",
     "react-test-renderer": "^17.0.2",
     "typescript": "^4.2.4"
   },
-  "react-native-builder-bob": {
-    "source": "src",
-    "output": "lib",
-    "targets": [
-      [
-        "commonjs",
-        {
-          "configFile": "./babel.config.js"
-        }
-      ],
-      "module",
-      "typescript"
-    ]
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
   },
-  "dependencies": {
-    "@babel/preset-typescript": "^7.17.12"
+  "browser": {
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
   }
 }
