--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    "target": "es5",
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./lib",
+    "strict": true,
     "jsx": "react",
     "lib": ["esnext"],
-    "skipLibCheck": true,
-    "strict": true
+    "skipLibCheck": true
   },
   "exclude": ["node_modules"],
   "include": ["src"]
